# AI4MusicGeneration

准备工作/: 选题考量.md  (+1 more)
实验代码/: CITATIONS.bib  LICENSE  README.md  pyproject.toml  requirements.txt
实验代码/configs/: data.yaml  eval.yaml  infer.yaml  model.yaml  train.yaml
实验代码/scripts/: bench_infer.py  cache_features.py  prepare_datasets.sh
实验代码/src/hs_mad/: __init__.py
实验代码/src/hs_mad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
实验代码/src/hs_mad/data/: datamodules.py
实验代码/src/hs_mad/data/datasets/: base.py  maestro.py  slakh.py
实验代码/src/hs_mad/data/srm/: features.py  renderer.py
实验代码/src/hs_mad/eval/: metrics.py
实验代码/src/hs_mad/modules/codecs/: clap_encoder.py  dac_wrapper.py
实验代码/src/hs_mad/modules/diffusion/: loss.py  sampler.py  scheduler.py
实验代码/src/hs_mad/modules/guidance/: decoupled_cfg.py
实验代码/src/hs_mad/modules/hse/: aux_losses.py  conformer.py  hse.py
实验代码/src/hs_mad/modules/unet/: mrci_unet.py  scm.py
实验代码/src/hs_mad/train/: main.py  optim.py  trainer.py
实验代码/src/hs_mad/utils/: audio.py  distributed.py  io.py  logging.py  midi.py  seed.py  timing.py  viz.py
实验代码/tests/unit/data/: test_datamodule.py  test_datasets.py  test_feature_cache.py  test_srm.py
实验代码/tests/unit/eval/: test_metrics.py
实验代码/tests/unit/modules/diffusion/: test_loss.py  test_sampler.py  test_scheduler.py
实验代码/tests/unit/modules/guidance/: test_decoupled_cfg.py
实验代码/tests/unit/train/: test_trainer.py
实验代码/tests/unit/utils/: test_audio.py  test_distributed.py  test_io.py  test_logging.py  test_midi.py  test_seed.py  test_timing.py  test_viz.py
(+14 files in other folders)
